fix:회원가입 로그인 뜯어고치는중 중복확인까지 통과